# MGCalibrator

./: .gitignore  .gitmodules  .zenodo.json  Absolutifier  CMakeLists.txt  LICENSE  README.md  absolutifier  environment.yml  example_out.csv  example_output.csv  example_output_scaling_factors.csv  example_output_zero_replaced.csv  install.sh  pyproject.toml  requirements.txt  setup.py  test.csv  test_mgcalibrator.sh
MGCalibrator/: __init__.py  cli.py  fileutils.py  parser.py  processor.py
absolutifier/: __init__.py  cli.py  fileutils.py  parser.py  processor.py
absolutifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: sample_1.fastq  sample_3.fastq  sample_4.fastq
data/PE_fastq/: counts.csv  metadata.csv  sample_1_R1.fastq  sample_1_R1.fastq.backup  sample_1_R2.fastq  sample_1_R2.fastq.backup  sample_2_R1.fastq  sample_2_R1.fastq.backup  sample_2_R2.fastq  sample_2_R2.fastq.backup  sample_3_R1.fastq  sample_3_R1.fastq.backup  sample_3_R2.fastq  sample_3_R2.fastq.backup  sample_4_R1.fastq  sample_4_R1.fastq.backup  sample_4_R2.fastq  sample_4_R2.fastq.backup
data/SE_fastq/: counts.csv  metadata.csv  sample_1.fastq  sample_2.fastq  sample_3.fastq  sample_4.fastq
data/fasta/: counts.csv  metadata.csv  sample_1.fasta  sample_2.fasta
data/input/: dna_mass.csv  reference_bins.csv  reference_clusters.csv
include/: count_bases.hpp  count_fastq_bases.h  io_matrix.hpp  matrix.hpp  read_metadata.h  read_metadata.hpp
src/: count_bases.cpp  count_fastq_bases.cpp  io_matrix.cpp  main.cpp  read_metadata.cpp
